Improvements in TIP #481 text

--- a/tip/481.md
+++ b/tip/481.md
@@ -1,4 +1,4 @@
-# TIP 481: Extend size range of various Tcl_Get*() functions
+# TIP 481: Tcl\_GetStringFromObj() with size\_t length parameter
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
 	State:          Draft
 	Type:           Project
@@ -10,10 +10,10 @@
 -----
 # Abstract
 
-This TIP proposes enhancing various C API functions which now have `int *` parameter,
-to be used as if they have a `size_t *` parameter. In addition, a new `Tcl_GetValue()`
-function is proposed which can retrieve a signed or unsigned integer from a `Tcl_Obj`,
-or a float/double/long double.
+This TIP proposes enhancing various C API functions which having a `int *` parameter,
+to be used with a `size_t *` parameter as well. In addition, a new `Tcl_GetValue()`
+function is proposed which can retrieve a signed or unsigned (wide) integer or a
+float/double/long double from a `Tcl_Obj`, .
 
 # Rationale
 
@@ -21,16 +21,45 @@ In Tcl 9, the range of various functions need to be increased. For example
 `Tcl_GetStringFromObj` now is limited to returning 32 bit for the maximum
 string length. This can be fixed by introducing an internal function
 `Tcl_GetStringFromObj2()` which has a `size_t *` parameter in stead of `int *`.
-`Tcl_GetStringFromObj` will be converted to a macro, which switches
- between the two possible functions depending on the size of the parameter.
+On top of that, `Tcl_GetStringFromObj` is provided as a macro, which switches
+between the two possible functions depending on the size of the parameter.
+
+The same is done for `Tcl_GetUnicodeFromObj` and `Tcl_GetByteArrayFromObj`.
 
 This way, we have a compatibility layer, easing the transition to Tcl 9.
-Extensions can already start using the extended range, even though it
-actually doesn't have effect in Tcl 8 yet.
+In Tcl 8.7, although the parameter has type size\_t, the actual length range
+that can be returned is actually -1 up to 4294967294. In Tcl 9, the full
+size\_t range is available.
 
 # Specification
 
-TODO
+Add to Tcl's stub table of public C routines the following new routines
+
+ > int **Tcl\_GetStringFromObj2**\(Tcl\_Obj \*_objPtr_, size\_t \*_lengthPtr_\)
+
+ > int **Tcl\_GetUnicodeFromObj2**\(Tcl\_Obj \*_objPtr_, size\_t \*_lengthPtr_\)
+
+ > int **Tcl\_GetByteArrayFromObj2**\(Tcl\_Obj \*_objPtr_, size\_t \*_lengthPtr_\)
+
+Those 3 functions do exactly the same as their existing counterparts, only the _lengthPtr_
+parameter is of type size\_t in stead of int. The original 3 functions will be wrapped in
+a macro of the same name, so depending on the actual size of the variable where _lengthPtr_
+points to, the switch between the two function versions are done automatically. So, the
+new functions don't need to be used in code, the original function can be used pointing to
+a size_t length variable as well.
+
+ > int **Tcl\_GetValue**\(Tcl\_Interp \*interp, Tcl\_Obj \*_objPtr_, void \*_valuePtr_, int _flags_\)
+
+This functions is able to function the same as Tcl\_GetIntFromObj, Tcl\_GetLongFromObj,
+Tcl\_GetWideFromObj and Tcl\_GetDoubleFromObj. The flags argument determines the actual
+conversion done.
+
+ > int **Tcl\_GetUIntFromObj**\(Tcl\_Interp \*interp, Tcl\_Obj \*_objPtr_, void \*_valuePtr_\)
+
+This is a wrapper macro around **Tcl\_GetValue**, handling unsigned integer values only.
+
+For Tcl 9.0, the function **Tcl\_GetIntFromObj** is modified to return 1 when the Tcl\_Obj
+value is in the range -2147483648 .. 2147483647.
 
 # Implementation
 
