--- a/tip/502.md
+++ b/tip/502.md
@@ -1,6 +1,6 @@
 # TIP 502: Index Value Reform
 	Author:         Don Porter <dgp@users.sourceforge.net>
-	State:          Accepted
+	State:          Final
 	Type:           Project
 	Vote:           Done
 	Created:        26-Feb-2018
