Added metadata about all 8.7 and 9.0 TIPs (where I can figure it out).

--- a/tip/167.md
+++ b/tip/167.md
@@ -6,13 +6,14 @@
 	Created:        19-Nov-2003
 	Post-History:   
 	Tcl-Version:    8.7
+	Tk-Ticket:      845248ffffffffffffff
 -----
 
 # Abstract
 
 This TIP proposes adding a new option to **wm attributes** for the
 Windows version of Tk that offers contextual help in that window.
-Additionally, a new event type **<Help>** is defined, that will be
+Additionally, a new event type `<Help>` is defined, that will be
 delivered when the user picks the Help button in the window and picks
 over a widget.  The event will be also hitted when user presses F1
 over one window.
@@ -35,7 +36,7 @@ widget \(or location in a widget.\)  The typical program reaction to
 this is to offer a pop-up window with some short help text or to open
 the program help in the relevant section.
 
-Additionally, the new proposed event **<Help>** can also get
+Additionally, the new proposed event `<Help>` can also get
 information when user presses key F1 over one window.
 
 This implementation is proposed for the Windows OS only, though in the
@@ -53,7 +54,7 @@ syntax:
 If set and if the window is transient, the question mark button will
 appear in the window title bar.
 
-A new event **<Help>** is added to the event list so as a user can
+A new event `<Help>` is added to the event list so as a user can
 do:
 
 	  bind $w <Help> {puts "You pressed widget %W"}
@@ -72,7 +73,7 @@ values.
 
 # Comments
 
-It would be preferable to use a virtual event **<<Help>>_ instead of extending the set of X events.  \(In particular, adding a new **<Help>** event means there has to be a new **HelpMask** bit flag to select for it, and we're running out of event mask bits\).
+It would be preferable to use a virtual event `<<Help>>` instead of extending the set of X events.  \(In particular, adding a new `<Help>` event means there has to be a new **HelpMask** bit flag to select for it, and we're running out of event mask bits\).
 
 # Copyright
 
