--- a/tip/216.md
+++ b/tip/216.md
@@ -17,7 +17,7 @@ level. This hampers the development of, for instance, a scripted
 debugger or tracing tool, because the shell must be called with an
 awkward command line \(stating the location of the script file
 implementing the facility\).  This TIP proposes a simple mechanism so
-that a command line like "tclsh -debug myprog.tcl" is possible.  The
+that a command line like `tclsh -debug myprog.tcl` is possible.  The
 new mechanism relies on the existing package mechanism and a few
 conventions. It can be implemented for the most part in Tcl.
 
@@ -27,8 +27,8 @@ With Tcl 8.4 it is quite easy to create a scripted debugger - see for
 instance <http://wiki.tcl.tk/6007>  and <http://wiki.tcl.tk.12251>  -
 since this version introduced execution traces. However, it is less
 simple to turn that into an "out-of-the-box" resource: suppose its
-implementation file is "debug.tcl", residing in a directory
-"~/my-tcl-utils" \(or "d:\\my-tcl-utils" under Windows\), then the
+implementation file is `debug.tcl`, residing in a directory
+`~/my-tcl-utils` \(or `d:\\my-tcl-utils` under Windows\), then the
 following command-line is necessary:
 
 	 tclsh ~/my-tcl-utils/debug.tcl myapp.tcl
@@ -41,10 +41,10 @@ instead of the more elegant:
 
 	 tclsh -debug myapp.tcl
 
-where some mechanism links the option "-debug" to the implementation
-file "debug.tcl".
+where some mechanism links the option `-debug` to the implementation
+file `debug.tcl`.
 
-An alternative method could be to make the file "debug.tcl" a loadable
+An alternative method could be to make the file `debug.tcl` a loadable
 package but this requires the user to change the application: it
 should then load the debug package whenever the user wants to
 interactively debug it.
