--- a/tip/238.md
+++ b/tip/238.md
@@ -20,13 +20,13 @@ instances and act on their creation.
 It would be useful if it was possible to set an event on class bindings to
 allow custom code to be run when a widget of a particular class is created.
 
-Note that the standard X11 <Create> event is not quite suitable, because that
+Note that the standard X11 `<Create>` event is not quite suitable, because that
 is delivered to the X11 parent of the widget, which is not Tk in the case of
 toplevel windows.
 
 # Proposal
 
-It is proposed that the virtual event <<Create>> be sent to every widget upon
+It is proposed that the virtual event `<<Create>>` be sent to every widget upon
 the creation of its actual underlying window \(i.e. as part of
 **Tk\_MakeWindowExist**\). Note that this is the earliest at which an event
 can actually be delivered to the widget; before that, doing **event
