--- a/tip/342.md
+++ b/tip/342.md
@@ -7,6 +7,7 @@
 	Created:	27-Nov-2008
 	Keywords:	dictionary, default value
 	Post-History:	
+	Tcl-Ticket:     2370575
 -----
 
 # Abstract
@@ -111,8 +112,8 @@ since **dict** is an ensemble, anyone can extend it at the script level and
 "the core can do without this bloat". However, it turns out than an in-core
 implementation is very easy whereas the alternatives are not so easy.
 
-Concretely, the necessary DictGetWithDefaultCmd is a trivial modification of
-DictExistsCmd, to take one extra argument after the _key_s and change the
+Concretely, the necessary `DictGetWithDefaultCmd` is a trivial modification of
+`DictExistsCmd`, to take one extra argument after the _key_s and change the
 final
 
 	  Tcl_SetObjResult(interp, Tcl_NewBooleanObj(valuePtr != NULL));
@@ -122,7 +123,7 @@ to
 	  Tcl_SetObjResult(interp, valuePtr != NULL ? valuePtr : objv[objc-1]);
 
 It is nowhere near as easy to do this in a well-behaved extension, since
-DictExistsCmd relies on TclTraceDictPath to do most of the work, and the
+`DictExistsCmd` relies on `TclTraceDictPath` to do most of the work, and the
 latter is AFAICT at best available in the internal stubs table.
 
 A script-level implementation is certainly possible, but the minute details of
