--- a/tip/346.md
+++ b/tip/346.md
@@ -7,6 +7,7 @@
 	Post-History:   
 	Keywords:       Tcl,encoding,convertto,strict,Unicode,String,ByteArray
 	Tcl-Version:    8.7
+	Tcl-Ticket:     1665628
 -----
 
 # Abstract
