--- a/tip/369.md
+++ b/tip/369.md
@@ -8,6 +8,7 @@
 	Post-History:   
 	Keywords:       Tk,user-defined data,dictionary
 	Tcl-Version:    8.7
+	Tk-Ticket:      3023578
 -----
 
 # Abstract
