--- a/tip/389.md
+++ b/tip/389.md
@@ -9,6 +9,7 @@
 	Discussions-To: Tcl Core list
 	Keywords:       Tcl
 	Tcl-Version:    8.7
+	Tcl-Branch:     tip-389
 -----
 
 # Abstract
@@ -165,7 +166,7 @@ Also note that the regexp engine still cannot really handle Unicode characters >
 it will handle those as if they consist of 2 separate characters. Most usage of
 regular expressions won't notice the difference.
 
-Those caveats are planned to be handled in "part 2" (TIP #497)
+Those caveats are planned to be handled in "part 2" ([TIP #497](497.md))
 
 # Reference Implementation
 
