--- a/tip/406.md
+++ b/tip/406.md
@@ -6,6 +6,7 @@
 	Post-History:	
 	Author:		Donal K. Fellows <dkf@users.sf.net>
 	Created:	01-Aug-2012
+	Tcl-Branch:	dkf-http-cookies
 -----
 
 # Abstract
