--- a/tip/426.md
+++ b/tip/426.md
@@ -11,6 +11,7 @@
 	Votes-For:      DKF, BG, JN, JD
 	Votes-Against:  DGP, AK
 	Votes-Present:  KBK, FV, SL
+	Tcl-Branch:     dkf-command-type
 -----
 
 # Abstract
