--- a/tip/428.md
+++ b/tip/428.md
@@ -8,6 +8,7 @@
 	Post-History:   
 	Keywords:       socket,non-blocking,error reporting,option dictionary
 	Tcl-Version:    8.7
+	Tcl-Branch:     tip-428
 -----
 
 # Abstract
