--- a/tip/430.md
+++ b/tip/430.md
@@ -13,6 +13,7 @@
 	Votes-For:      DKF, KBK, SL, AK, JD, JN (partially)
 	Votes-Against:  JN (partially)
 	Present:        JN (partially)
+	Tcl-Branch:     core_zip_vfs
 -----
 
 # Abstract
