--- a/tip/452.md
+++ b/tip/452.md
@@ -12,6 +12,7 @@
 	Votes-For:      KBK, JD
 	Votes-Against:  DKF, JN, DGP, AK
 	Votes-Present:  BG, FV, SL
+	Tcl-Branch:     tip-452
 -----
 
 # Abstract
