--- a/tip/476.md
+++ b/tip/476.md
@@ -6,7 +6,8 @@
 	Created: 27-Sep-2017
 	Post-history: PM
 	Tcl-Version: 8.7
-	Keywords: scan printf
+	Keywords: scan, printf
+	Tcl-Branch: z_modifier
 -----
 
 # Abstract
