--- a/tip/495.md
+++ b/tip/495.md
@@ -184,6 +184,4 @@ file can be directly sourced, or invoked with "package require practcl".
 
 *This is a work in progress.*
 
-Details are trickling in from the Practcl project
-
-[http://www.etoyoc.com/tcl/Practcl.pdf]
+Details are trickling in from the [Practcl project](http://www.etoyoc.com/tcl/Practcl.pdf).
