--- a/tip/500.md
+++ b/tip/500.md
@@ -9,6 +9,7 @@
 	Tcl-Version:    8.7
 	Votes-For:      DKF, JN, AF, JD, SL, AK, KBK
 	Votes-Against:  none
+	Tcl-Branch:     tip-500
 -----
 
 # Abstract
