--- a/tip/501.md
+++ b/tip/501.md
@@ -7,6 +7,7 @@
 	Post-History:
 	Keywords:       Tcl,string
 	Tcl-Version:    8.7
+	Tcl-Branch:     tip-501
 -----
 # Abstract
 This tip proposes the addition of an *is dict* test to the string ensemble. The command
