--- a/tip/508.md
+++ b/tip/508.md
@@ -11,6 +11,7 @@
 	Votes-For:      DKF, BG, KBK, JN, JD, DGP, FV, SL, AK
 	Votes-Against:  none
 	Votes-Present:  none
+	Tcl-Branch:     tip-508
 -----
 
 # Abstract
