--- a/tip/516.md
+++ b/tip/516.md
@@ -11,6 +11,7 @@
 	Votes-For:      DKF, JN, JD, AK
 	Votes-Against:  none
 	Votes-Present:  BG, KBK, DGP, FV, SL
+	Tcl-Branch:     tip-516
 -----
 
 # Abstract
