--- a/tip/518.md
+++ b/tip/518.md
@@ -6,7 +6,8 @@
 	Created:        22-Sep-2018
 	Post-History:   
 	Keywords:       Tk
-	Tcl-Version:    8.7.0
+	Tcl-Version:    8.7
+	Tk-Branch:      tip518-event-last-child-unmanaged
 -----
 # Abstract
 
@@ -29,7 +30,7 @@ Another example is the scrolledwindow example by Emiliano in ticket 2863003fff <
 A typical workaround is to configure the width/height manually after the last children was unmapped.
 Unfortunately, this fact may not be determined for example by scrolling widgets etc. An eventual Configure binding is not firing.
 
-Within this TIP, a new virtual event \<\<NoManagedChild\>\> is fired to inform about no remaining childs.
+Within this TIP, a new virtual event `<<NoManagedChild>>` is fired to inform about no remaining childs.
 
 # Example
 
@@ -40,11 +41,15 @@ This works well when widgets are added or removed. Only removing the last client
 
 Please paste the code below to a wish console or execute it.
 On startup it shows on the console:
+
 	requested frame height: 1
 
-Then press the "\+" button to add a user widget. The console output is:
+Then press the "\+" button to add a user widget. The console output
+is:
+
 	+
 	requested frame height: 100
+
 Technically, the frame ".c.f.i1" was packed into the client frame ".c.f".
 The client frame ".c.f" changes its requested size to hold the new child, which invokes the Convigure event and adjustes the scrolling region of the canvas.
 The new scrolling region is shown graphically by the scrollbar.
@@ -92,7 +97,7 @@ With the proposed patch applied, an additional event is fired the removal of the
 
 # Proposal
 
-The proposal is to fire the new virtual event \<\<NoManagedChild\>\> if the last children is unpacked/ungridded/destroyed.
+The proposal is to fire the new virtual event `<<NoManagedChild>>` if the last children is unpacked/ungridded/destroyed.
 A managing widget may bind to this event and do the resize of the widget or other appropriate action.
 
 Here are additional lines for the example above.
@@ -129,7 +134,7 @@ TIP 454 was withdrawn due to:
    1. if the geometry manager is changed (ex: pack to grid), there is a flickering introduced.
    2. an additional Configure event was introduced which breaks present script.
 
-To invoke \<\<Configure\>\> instead \<\<NoManagedChild\>\> would trigger incompatibility 2 of TIP454.
+To invoke `<<Configure>>` instead `<<NoManagedChild>>` would trigger incompatibility 2 of TIP454.
 Due to that, a new virtual event is proposed.
 
 # Copyright
