--- a/tip/290.md
+++ b/tip/290.md
@@ -8,6 +8,7 @@
 	Post-History:   
 	Keywords:       Tcl,error,trap
 	Tcl-Version:    8.7
+	Tcl-Ticket:     1587317
 -----
 
 # Abstract
@@ -73,13 +74,13 @@ The implementation consists of two parts: a registration command for the custom 
 
 The registration command is responsible for:
 
-    * register the command for caught and/or uncaught exceptions
+   * register the command for caught and/or uncaught exceptions
 
-    * retrieve the currently registered command
+   * retrieve the currently registered command
 
-    * change the execution details \(caught and/or uncaught errors\) and the command
+   * change the execution details \(caught and/or uncaught errors\) and the command
 
-    * unregister the command and thus get back to the current behaviour in error cases
+   * unregister the command and thus get back to the current behaviour in error cases
 
 Since the functionality is very similar to the family of **trace** commands, the proposed registration command is an extension to trace:
 
@@ -99,11 +100,11 @@ The _command_ that is registered will quell the error if it returns normal \(ret
 
 The changes in the execution engine should be done so that:
 
-    * existing functionality is not disturbed
+   * existing functionality is not disturbed
 
-    * the call frame is preserved after the error occured - thus the custom command is run in the same level as where the error was thrown
+   * the call frame is preserved after the error occured - thus the custom command is run in the same level as where the error was thrown
 
-    * the _::errorInfo_ and _::errorCode_ variables are updated to contain the error information **that is available in the current callframe**. This information must be updated before the custom command is run, so that it is accessible from there.
+   * the _::errorInfo_ and _::errorCode_ variables are updated to contain the error information **that is available in the current callframe**. This information must be updated before the custom command is run, so that it is accessible from there.
 
 The innermost function that is called on Tcl code execution is _TclEvalObjvInternal\(\)_. It is called from others to execute a command and returns the code that the executed command returned. It's the best place to trigger the error handler execution, but whether errors are catched \(catchLevel\) must be present at this time. Therefore, this level is stored in the current Interp\* from within the callers of _TclEvalObjvInternal\(\)_. The catch level can be determined either from _TclExecuteByteCode\(\)_ or from _Tcl\_CatchObjCmd\(\)_ directly.
 
