--- a/tip/345.md
+++ b/tip/345.md
@@ -8,6 +8,7 @@
 	Discussions-To: Tcl Core List
 	Keywords:       Tcl,encoding,invalid UTF-8
 	Tcl-Version:    8.7
+	Tcl-Ticket:     2564363
 -----
 
 # Abstract
