--- a/tip/425.md
+++ b/tip/425.md
@@ -7,6 +7,7 @@
 	Post-History:   
 	Keywords:       Tcl,platform integration,i18n
 	Tcl-Version:    8.7
+	Tcl-Branch:     win-console-panic
 -----
 
 # Abstract
