--- a/tip/460.md
+++ b/tip/460.md
@@ -7,6 +7,7 @@
 	Post-History:   
 	Keywords:       Tcl,variable,link,upvar
 	Tcl-Version:    9.0
+	Tcl-Branch:     dah-proc-arg-upvar
 -----
 
 # Abstract
