--- a/tip/463.md
+++ b/tip/463.md
@@ -7,6 +7,7 @@
 	Author:		Donal Fellows <dkf@users.sf.net>
 	Created:	11-Feb-2017
 	Keywords:	Tcl, regular expression
+	Tcl-Branch:	tip-463
 -----
 
 # Abstract
