--- a/tip/470.md
+++ b/tip/470.md
@@ -7,6 +7,7 @@
 	Author:		Donal Fellows <dkf@users.sf.net>
 	Created:	23-Apr-2017
 	Keywords:	TclOO, metaprogramming
+	Tcl-Branch:	tip-470
 -----
 
 # Abstract
