--- a/tip/479.md
+++ b/tip/479.md
@@ -7,6 +7,7 @@
 	Post-History:
 	Keywords:       Tcl,procedure,argument handling
 	Tcl-Version:    8.7
+	Tcl-Branch:     tip479
 -----
 # Abstract
 
