--- a/tip/482.md
+++ b/tip/482.md
@@ -7,6 +7,7 @@
 	Post-History:   
 	Keywords:       Tk, demos, configuration
 	Tcl-Version:    8.7
+	Tk-Branch:      tk-stu-pkg
 -----
 # Abstract
 
