--- a/tip/488.md
+++ b/tip/488.md
@@ -7,6 +7,7 @@
 	Post-History:
 	Keywords:       Tcl, string representation, floating-point
 	Tcl-Version:    9.0
+	Tcl-Branch:     tip-488
 -----
 <!-- TOC BEGIN (auto generated with tiptoc) -->
 * <a href='#toc-2'>Abstract</a>
