--- a/tip/499.md
+++ b/tip/499.md
@@ -7,6 +7,7 @@
 	Post-History:
 	Keywords:       msgcat, oo
 	Tcl-Version:    8.7
+	Tcl-Branch:     tip499-msgcat-custom-preferences
 -----
 
 # Abstract
