--- a/tip/509.md
+++ b/tip/509.md
@@ -11,6 +11,7 @@
 	Votes-For:      DKF, KBK, JN, JD, DGP, FV, SL, AK
 	Votes-Against:  none
 	Votes-Present:  BG
+	Tcl-Branch:     tip-509
 -----
 
 # Abstract
