Metadata for 8.6 TIPs

--- a/tip/304.md
+++ b/tip/304.md
@@ -7,6 +7,7 @@
 	Post-History:   
 	Keywords:       Tcl,exec,process,subprocess,pipeline,channel
 	Tcl-Version:    8.6
+	Tcl-Ticket:     1978495
 -----
 
 # Abstract
