--- a/tip/317.md
+++ b/tip/317.md
@@ -7,6 +7,7 @@
 	Post-History:   
 	Keywords:       base64,uuencode,hex,transfer encoding
 	Tcl-Version:    8.6
+	Tcl-Ticket:     1956530
 -----
 
 # Abstract
