--- a/tip/321.md
+++ b/tip/321.md
@@ -7,6 +7,7 @@
 	Post-History:   
 	Keywords:       Tk,BLT,busy
 	Tcl-Version:    8.6
+	Tk-Ticket:      1997907
 -----
 
 # Abstract
@@ -32,7 +33,7 @@ Discussions on CLT and \#tcl indicated that extracting functionality from BLT
 and add it to Tcl and Tk might be a good way to make the blt commands
 available for every Tcl programmer.
 
-This TIP proposes a way to add the blt::busy command to Tk, based on the code
+This TIP proposes a way to add the **blt::busy** command to Tk, based on the code
 as found in BLT2.4z and the code as found in busy.kit. While adding the code
 to Tk, it was rewritten to use the Tcl\_Obj interface and the new option
 interface. The interface has also been simplified. The **blt::release**
