--- a/tip/332.md
+++ b/tip/332.md
@@ -8,6 +8,7 @@
 	Keywords:       Tcl,channel,close,socket,shutdown
 	Obsoletes:      301
 	Tcl-Version:    8.6
+	Tcl-Ticket:     219159
 -----
 
 # Abstract
