--- a/tip/357.md
+++ b/tip/357.md
@@ -6,6 +6,7 @@
 	Created:        01-Oct-2009
 	Post-History:   
 	Tcl-Version:    8.6
+	Tcl-Ticket:     2891616
 -----
 
 # Abstract
@@ -146,7 +147,7 @@ virtual filesystems layer atop tclvfs.
 # Reference Implementation
 
 A reference implementation is nearing completion, and the draft code is
-available attached to [Patch 2891616]<https://sourceforge.net/support/tracker.php?aid=2891616>  at SourceForge.
+available attached to [Patch 2891616](https://sourceforge.net/support/tracker.php?aid=2891616)  at SourceForge.
 
 # License
 
