--- a/tip/395.md
+++ b/tip/395.md
@@ -50,9 +50,7 @@ already used in **::tcl::mathfunc::entier**.
 
 # Reference Implementation
 
-A reference implementation is available here:
-
-    <http://sites.google.com/site/josdecoster/Home/tip\_string\_is\_entier.diff>
+A reference implementation is available here: <http://sites.google.com/site/josdecoster/Home/tip\_string\_is\_entier.diff>
 
 # Copyright
 
