--- a/tip/398.md
+++ b/tip/398.md
@@ -7,6 +7,7 @@
 	Post-History:   
 	Keywords:       close,exit,flush,blocking,nonblocking
 	Tcl-Version:    8.6
+	Tcl-Branch:     tip-398-impl
 -----
 
 # Abstract
@@ -17,7 +18,7 @@ non-blocking channels on exit.
 
 # Rationale
 
-The close.n manpage says:
+The close(n) manpage says:
 
  > Channels are automatically closed when an interpreter is destroyed and when
    the process exits.  Channels are switched to blocking mode, to ensure that
