--- a/tip/404.md
+++ b/tip/404.md
@@ -8,6 +8,7 @@
 	Discussions-To: Tcl Core list
 	Keywords:       msgcat, convention
 	Tcl-Version:    8.6
+	Tcl-Ticket:     3544988
 -----
 
 # Abstract
