--- a/tip/405.md
+++ b/tip/405.md
@@ -8,6 +8,7 @@
 	Post-History:   
 	Keywords:       Tcl,mapeach,loop,accumulator
 	Tcl-Version:    8.6
+	Tcl-Ticket:     3163961
 -----
 
 # Abstract
