--- a/tip/427.md
+++ b/tip/427.md
@@ -9,6 +9,7 @@
 	Post-History:   
 	Keywords:       async socket connect,introspection,IPV6
 	Tcl-Version:    8.6.4
+	Tcl-Branch:     tip-427
 -----
 
 # Abstract
