--- a/tip/429.md
+++ b/tip/429.md
@@ -8,6 +8,7 @@
 	Post-History:   
 	Keywords:       Tcl,cat,scriptlet result
 	Tcl-Version:    8.6.2
+	Tcl-Branch:     tip-429
 -----
 
 # Abstract
@@ -25,8 +26,8 @@ cases:
    * scriptlets such as used for **lmap** are expected to contain commands,
      the last one of which returns a value. To have the scriptlet return a
      concatenated string or even just a single string literal, one currently
-     needs to misuse some corner-case of a non-trivial command, like **return
-     -level 0 $x$y** or **string map \{\} "$x$y"** just to have the scriptlet
+     needs to misuse some corner-case of a non-trivial command, like `return
+     -level 0 $x$y` or `string map {} "$x$y"` just to have the scriptlet
      produce the string as its result.
 
 # Proposal
@@ -42,9 +43,9 @@ Compiling that new command to bytecode should be trivial, as concatenation of
 strings is already compileable. The added value would be allowing braced
 string literals to be involved, and promoting the resulting stack-item to the
 result of the command/scriptlet. \(This simple compileability is also meant to
-be a main advantage over **join [list ...] ""**, where the contents of the
-intermediate list are either a single word or many words, or **lindex [list
-...] 0** where the contents of the intermediate list are a single word.\)
+be a main advantage over `join [list ...] ""`, where the contents of the
+intermediate list are either a single word or many words, or `lindex [list
+...] 0` where the contents of the intermediate list are a single word.\)
 
 The following equality will hold for any arbitrary contents of the variables
 **a** and **b**:
@@ -64,4 +65,3 @@ Available as branch tip-429 on core.tcl.tk.
 # Copyright
 
 This document has been placed in the public domain.
-
