--- a/tip/473.md
+++ b/tip/473.md
@@ -7,6 +7,7 @@
 	Author:		Donal Fellows <dkf@users.sf.net>
 	Created:	06-Jun-2017
 	Keywords:	Tcl, missing functionality, bugfix
+	Tcl-Branch:	oo-copy-ns
 -----
 
 # Abstract
