--- a/tip/474.md
+++ b/tip/474.md
@@ -1,5 +1,5 @@
 # TIP 474: Treat the mouse wheel events in a uniform way
-	Author:	Arjen Markus (arjen.markus895@gmail.com)
+	Author:	Arjen Markus <arjen.markus895@gmail.com>
 	State:	Draft
 	Type:	Project
 	Vote:	Pending
@@ -7,6 +7,7 @@
 	Post-history:	PM
 	Tcl-Version:	8.6
 	Keywords:	Tk, events
+	Tk-Branch:	tip474-uniform-mouse-wheel
 -----
 
 # Abstract
