--- a/tip/307.md
+++ b/tip/307.md
@@ -7,6 +7,7 @@
 	Created:	28-Sep-2007
 	Post-History:	
 	Keywords:	Tcl, result, transfer, interpreter, API rename
+	Tcl-Ticket:     1723738
 -----
 
 # Abstract
