--- a/tip/400.md
+++ b/tip/400.md
@@ -7,6 +7,7 @@
 	Author:		Donal K. Fellows <dkf@users.sf.net>
 	Created:	30-Mar-2012
 	Keywords:	Tcl, zlib
+	Tcl-Branch:	tip-400-impl
 -----
 
 # Abstract
