--- a/tip/477.md
+++ b/tip/477.md
@@ -7,6 +7,7 @@
 	Post-History:
 	Keywords:       Windows nmake build
 	Tcl-Version:    8.6.8
+	Tcl-Branch:     vc-reform
 -----
 <!-- TOC BEGIN (auto generated with tiptoc) -->
 * <a href='#toc-2'>Abstract</a>
@@ -1221,18 +1222,3 @@ different compiler versions.
 # <a id='toc-56'></a>Copyright
 
 This document has been placed in the public domain.
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
