Add in scheme for non-patch and non-branch URLs

--- a/tip/164.md
+++ b/tip/164.md
@@ -13,7 +13,7 @@
 
 # Abstract
 
-This TIP proposes to add a _rotate_ subcommand to the canvas widget
+This TIP proposes to add a **rotate** subcommand to the **canvas** widget
 to facilitate rotating items in very much the same way as is now
 possible with scaling and moving.
 
@@ -75,9 +75,9 @@ work.
 
 # Comments
 
-It might be useful to utilize the -anchor Tk option in all canvas items and add a new "-anchoroffset $x,$y" option, where $x $y be canvas distances relevant to the anchor position. Once defined, or with their default values, the -anchor and -anchoroffset values combined will provide the item's center, for placement and rotation purposes. Item sets, constituting symbols, can then be manipulated easily.
+It might be useful to utilize the `-anchor` Tk option in all canvas items and add a new `-anchoroffset $x,$y` option, where `$x` and `$y` be canvas distances relevant to the anchor position. Once defined, or with their default values, the `-anchor` and `-anchoroffset` values combined will provide the item's center, for placement and rotation purposes. Item sets, constituting symbols, can then be manipulated easily.
 
-It could probably be beneficial to add an -angle option \(and an accomplanying -angleunit one\), to persist a rotation angle in the configuration database. The presence of an angle value other than zero would help negate rotation, thus re-instating the item to its initial orientation.
+It could probably be beneficial to add an `-angle` option \(and an accompanying `-angleunit` one\), to persist a rotation angle in the configuration database. The presence of an angle value other than zero would help negate rotation, thus re-instating the item to its initial orientation.
 
 # Copyright
 
