--- a/tip/171.md
+++ b/tip/171.md
@@ -113,7 +113,7 @@ See above.
 
 Use of "\*Scrollbar" is to catch TScrollbar as well.
 
-This is adapted from tklib/style/as.tcl mousewheel adjustments and has proved
+This is adapted from `tklib/style/as.tcl` mousewheel adjustments and has proved
 useful and workable across a variety of applications.
 
 There is a bit of awkwardness in handling widgets that have their own
