--- a/tip/228.md
+++ b/tip/228.md
@@ -8,6 +8,7 @@
 	Created:        02-Nov-2004
 	Post-History:   
 	Tcl-Version:    8.7
+	Implementation-URL: http://sourceforge.net/projects/tclvfs/
 -----
 
 # Abstract
