--- a/tip/236.md
+++ b/tip/236.md
@@ -7,6 +7,7 @@
 	Post-History:   
 	Keywords:       Tk,anchor,place
 	Tcl-Version:    8.6
+	Implementation-URL: http://www.eecs.umich.edu/~mckay/canvmoveto.patch.gz
 -----
 
 # Abstract
