--- a/tip/325.md
+++ b/tip/325.md
@@ -38,15 +38,15 @@ added to the tray. If there is no system tray at the icon creation time, the
 icon will be invisible. When a new system tray appears, the icon will be added
 to it. Options:
 
- -class: WM\_CLASS attribute for the icon window. Tray manager may use
+ **-class** _class_: WM\_CLASS attribute for the icon window. Tray manager may use
          class name to remember icon position or other attributes.
 
- -image: image to show in the system tray. The value must be the name of a
+ **-image** _photo_: image to show in the system tray. The value must be the name of a
          photo image. Transparency data of the photo are used to set the
          window's shape. The icon will be automatically redrawn or resized
          appropriately on any image modifications.
 
- -visible: boolean value indicating whether the icon must be visible. The
+ **-visible** _flag_: boolean value indicating whether the icon must be visible. The
          system tray manager continues to manage the icon whether it is
          visible or not. Thus when invisible icon becomes visible, its
          position on the system tray is likely to remain the same.
