--- a/tip/329.md
+++ b/tip/329.md
@@ -8,6 +8,7 @@
 	Discussions-To: http://wiki.tcl.tk/21608
 	Obsoletes:      89
 	Tcl-Version:    8.6
+	Implementation-URL: http://www.crypt.co.za/pub/try-1.tcl
 -----
 
 # Abstract
