--- a/tip/349.md
+++ b/tip/349.md
@@ -23,11 +23,11 @@ variables to hold the data\) or even entire additional packages/frameworks
 \(like Snit\) exactly because of the lack of the proposed option.
 
 So the proposal is "solutions instead of workarounds": let's introduce
-the option - further named "-cargo" \(the name taken from Clipper\) - which
+the option - further named `-cargo` \(the name taken from Clipper\) - which
 will cancel the current need for fixes of different kind. The option should
 allow to access a string field \(or even better: a dictionary\), allowing to
 keep there any widget-related data, choosen by script creator. It's value
-should be accessible both by "cget" and "percent substitution" \(like "%C"\).
+should be accessible both by `cget` and "percent substitution" \(like `%C`\).
 
 # Rationale
 
@@ -69,4 +69,3 @@ easier, b\) Its use won't be obligatory, if someone will be afraid of
 # License
 
 This document has been placed in the public domain.
-
