--- a/tip/393.md
+++ b/tip/393.md
@@ -6,6 +6,7 @@
 	Created:        25-Apr-2011
 	Post-History:   
 	Tcl-Version:    8.7
+	Implementation-URL: http://sqlitestudio.pl/tcl/patches/tip-393-lsearch-command.patch
 -----
 
 # Abstract
