--- a/tip/394.md
+++ b/tip/394.md
@@ -29,7 +29,7 @@ well:
 
  * even more buttons...
 
-On Linux platform, bind'ing on `<Button>` will catch all\(?\) or these \(and "%b"
+On Linux platform, bind'ing on `<Button>` will catch all\(?\) or these \(and `%b`
 gives an ordinal number which allows for some heuristic recognition\). But even
 on Linux, it is not possible to bind specifically to e.g. `<Button-8>`, or to
 `<B8-Motion>` kind of events.
