--- a/tip/411.md
+++ b/tip/411.md
@@ -6,6 +6,7 @@
 	Created:        31-Aug-2012
 	Post-History:   
 	Tcl-Version:    8.7
+	Implementation-URL: http://sqlitestudio.pl/tcl/patches/tip-411-chan_info.patch
 -----
 
 # Abstract
