--- a/tip/412.md
+++ b/tip/412.md
@@ -9,7 +9,7 @@
 	Keywords:       Tcl,localization,msgcat
 	Obsoletes:      399
 	Tcl-Version:    8.6
-	Tcl-Ticket:     msgcat_dyn_locale
+	Tcl-Branch:     msgcat_dyn_locale
 -----
 
 # Abstract
