--- a/tip/455.md
+++ b/tip/455.md
@@ -72,24 +72,24 @@ The **vwait** command shall have the following signature:
 
 where _options_ are:
 
-  --:                              indicates end of options
+  **--**:                              indicates end of options
 
-  -all:                            all \(except timeout\) conditions must be met
+  **-all**:                            all \(except timeout\) conditions must be met
 
-  -nofileevents:                   don't consider file events
+  **-nofileevents**:                   don't consider file events
 
-  -noidleevents:                   don't consider idle events
+  **-noidleevents**:                   don't consider idle events
 
-  -notimerevents:                  don't consider timer events
+  **-notimerevents**:                  don't consider timer events
 
-  -nowindowevents:                 don't consider window system events
+  **-nowindowevents**:                 don't consider window system events
 
-  -readable <chan>:                _<chan>_ becomes readable
+  **-readable** _<chan>_:                _<chan>_ becomes readable
 
-  -timeout <ms>: timeout in milliseconds; return the estimated number of
+  **-timeout** _<ms>_: timeout in milliseconds; return the estimated number of
     milliseconds remaining in the wait.
 
-  -writable <chan>:                _<chan>_ becomes writable
+  **-writable** _<chan>_:                _<chan>_ becomes writable
 
 The return value of **vwait** shall be the empty string except when the
 **-timeout** option is in effect \(see above\).
