--- a/tip/513.md
+++ b/tip/513.md
@@ -7,6 +7,7 @@
 	Post-History:   
 	Keywords:       Tcl,data structure
 	Tcl-Version:	8.7
+	Implementation-URL: https://core.tcl.tk/tips/doc/trunk/attach/513/agendas.tcl
 -----
 
 # Abstract
