--- a/tip/86.md
+++ b/tip/86.md
@@ -7,6 +7,7 @@
 	Created:        08-Feb-2002
 	Post-History:   
 	Tcl-Version:    8.7
+	Implementation-URL: http://pdqi.com/download/tclline-8.4.9.diff.gz
 -----
 
 # Abstract
@@ -335,7 +336,7 @@ Donal Fellows asks if trace is disabled in the execution handler,
 how tracing to a sub-interp would work, and clarification on the
 purpose and use of trace variable \{debug\}.
 
-    * The documentation was updated to clarify these points.
+   * The documentation was updated to clarify these points.
 
 # Copyright
 
