--- a/tip/186.md
+++ b/tip/186.md
@@ -8,6 +8,7 @@
 	Post-History:   
 	Keywords:       Tk
 	Tcl-Version:    8.7
+	Implementation-URL: http://pdqi.com/configure.diff.gz
 -----
 
 # Abstract
