--- a/tip/234.md
+++ b/tip/234.md
@@ -7,6 +7,7 @@
 	Post-History:   
 	Keywords:       Tcl,zip,gzip,deflate
 	Tcl-Version:    8.6
+	Implementation-URL: http://svn.scheffers.net/zlib
 -----
 
 # Abstract
