--- a/tip/379.md
+++ b/tip/379.md
@@ -7,6 +7,7 @@
 	Created:	17-Oct-2010
 	Post-History:	
 	Keywords:	event
+	Implementation-URL: http://www.wjduquette.com/notifier/hook-0.1.zip
 -----
 
 # Abstract
