--- a/tip/395.md
+++ b/tip/395.md
@@ -9,6 +9,7 @@
 	Keywords:       Tcl
 	Tcl-Version:    8.6
 	Obsoletes:	347
+	Implementation-URL: http://sites.google.com/site/josdecoster/Home/tip_string_is_entier.diff
 -----
 
 # Abstract
