--- a/tip/397.md
+++ b/tip/397.md
@@ -7,6 +7,7 @@
 	Author:		Donal K. Fellows <donal.k.fellows@manchester.ac.uk>
 	Created:	13-Feb-2012
 	Keywords:	Tcl, TclOO, copy, clone
+	Implementation-URL: https://core.tcl.tk/tcloo/timeline?r=development-rfe3485060
 -----
 
 # Abstract
