--- a/tip/287.md
+++ b/tip/287.md
@@ -7,6 +7,7 @@
 	Post-History:   
 	Keywords:       Tcl,channel,chan,pendinginput,pendingoutput
 	Tcl-Version:    8.5
+	Tcl-Ticket:     1586860
 -----
 
 # Abstract
