Some more links

--- a/tip/272.md
+++ b/tip/272.md
@@ -7,6 +7,7 @@
 	Author:		Donal K. Fellows <donal.k.fellows@manchester.ac.uk>
 	Created:	23-Aug-2006
 	Keywords:	Tcl, lreverse
+	Tcl-Ticket:	1545151
 -----
 
 # Abstract
