Some more links

--- a/tip/229.md
+++ b/tip/229.md
@@ -6,6 +6,7 @@
 	Post-History:	
 	Author:		Donal K. Fellows <donal.k.fellows@man.ac.uk>
 	Created:	03-Nov-2004
+	Tcl-Ticket:	1159942
 -----
 
 # Abstract
