Some more links

--- a/tip/194.md
+++ b/tip/194.md
@@ -8,6 +8,7 @@
 	Post-History:   
 	Keywords:       Tcl,lambda,anonymous,command,function,functional programming
 	Tcl-Version:    8.5
+	Tcl-Ticket:     944803
 -----
 
 # Abstract
