--- a/tip/179.md
+++ b/tip/179.md
@@ -7,6 +7,7 @@
 	Author:		Brian Griffin <bgriffin@model.com>
 	Created:	22-Mar-2004
 	Keywords:	Tk
+	Implementation-URL: ftp://ftp.model.com/pub/tcl/pw_hide_TIP.tgz
 -----
 
 # Abstract
