--- a/tip/152.md
+++ b/tip/152.md
@@ -8,6 +8,7 @@
 	Obsoletes:	25
 	Post-History:	
 	Keywords:	Tk
+	Implementation-URL: http://hem.fyristorg.com/matben/download/MovableAlerts.dmg
 -----
 
 # Abstract
