--- a/tip/155.md
+++ b/tip/155.md
@@ -6,6 +6,7 @@
 	Created:        08-Sep-2003
 	Post-History:   
 	Tcl-Version:    8.5
+	Tk-Ticket:      791292
 -----
 
 # Abstract
@@ -23,8 +24,8 @@ The text widget has a number of limitations:
   1. The aforementioned scrollbar interaction is flawed
 
   1. To count the number of characters between index positions $idx1
-     and $idx2, one can only really do _string length [.text get
-     $idx1 $idx2]_.  There is no easy way to determine the number of
+     and $idx2, one can only really do `string length [.text get
+     $idx1 $idx2]`.  There is no easy way to determine the number of
      visible \(non-elided\) characters between these two index
      positions, nor the number of valid index positions between them
      \(remember that embedded windows or images always take up one unit
@@ -45,7 +46,7 @@ The text widget has a number of limitations:
 
   1. Even though 'search' can operate optionally on all text or just non-elided text, there is no easy way to retrieve the actual string which matched in the latter case, if the match spans characters on either side of an elided range.
 
-  1. _.text search -backwards -all_ returns subsets of indices in forwards rather than backwards order; with simple multi-line greedy searches \(like _-nolinestop -- .\*_\) it fails to match multiple lines; it can return backwards matches which fully enclose each other, etc.
+  1. `.text search -backwards -all` returns subsets of indices in forwards rather than backwards order; with simple multi-line greedy searches \(like `-nolinestop -- .\*`\) it fails to match multiple lines; it can return backwards matches which fully enclose each other, etc.
 
 This TIP is, therefore, to fix these limitations, as follows:
 
@@ -293,7 +294,7 @@ Previously, achieving something like the second line was quite complex.
 
 # Search subcommand
 
-In Tk8.5a0 at present _search -all -backwards ..._ returns the list of indices backwards from line to line, but forwards within each line \(a side-effect of backwards matching being implemented as repeated forward searches\).  Large backwards or forwards regexp searches for, say, _-nolinestop -- .\*_ would only match a single line.  Various other overlap vs non-overlap problems too.  All of these glitches \(my own code ;-\) have been fixed and the test suite for _search_ hugely extended.
+In Tk8.5a0 at present _search -all -backwards ..._ returns the list of indices backwards from line to line, but forwards within each line \(a side-effect of backwards matching being implemented as repeated forward searches\).  Large backwards or forwards regexp searches for, say, `-nolinestop -- .\*` would only match a single line.  Various other overlap vs non-overlap problems too.  All of these glitches \(my own code ;-\) have been fixed and the test suite for _search_ hugely extended.
 
 # Backward Compatibility
 
@@ -375,7 +376,7 @@ these are listed here for completeness:
 
   * The pre-existing behaviour of _\+/- N lines_ uses byte-indices instead of x-pixel calculations \(thereby having the cursor bobbling around when there are multi-byte characters or even worse when there are images, proportional fonts, tabs, etc\).  Further, the behaviour is quite strange when wrapping is enabled in the widget.  This TIP does not propose any changes in this area other than to suggest that Tcl coders make use of 'displaylines' instead, for more consistent behaviour \(as has been done to text.tcl\).
 
-  * To do word-matching with _search_ requires the use of a regexp pattern and something like _.text search -regexp -- "\\\\m[quote::Regfind $string]\\\\M" $pos_.  It might be nice to add a flag to control word-matching without the need for such manipulations.
+  * To do word-matching with _search_ requires the use of a regexp pattern and something like `.text search -regexp -- "\\m[quote::Regfind $string]\\M" $pos`.  It might be nice to add a flag to control word-matching without the need for such manipulations.
 
 None of these is included in the current TIP or current
 implementation.  If interested members of the community wish to extend
