--- a/tip/177.md
+++ b/tip/177.md
@@ -7,6 +7,7 @@
 	Author:		Brian Griffin <bgriffin@model.com>
 	Created:	17-Mar-2004
 	Keywords:	Tk
+	Implementation-URL: ftp://ftp.model.com/pub/tcl/pw_stretch_TIP.tgz
 -----
 
 # Abstract
