Some more links

--- a/tip/132.md
+++ b/tip/132.md
@@ -8,6 +8,7 @@
 	Post-History:   
 	Keywords:       floating point,IEEE,precision
 	Tcl-Version:    8.5
+	Tcl-Branch:     kennykb-numerics-branch
 -----
 
 # Abstract
