--- a/tip/136.md
+++ b/tip/136.md
@@ -6,6 +6,7 @@
 	Created:        25-May-2003
 	Post-History:   
 	Tcl-Version:    8.5
+	Implementation-URL: http://homepage.ntlworld.com/whiteowl/tcl/tcl843-lrepeat.patch
 -----
 
 # Abstract
