--- a/tip/138.md
+++ b/tip/138.md
@@ -8,6 +8,7 @@
 	Post-History:	
 	Keywords:	thread specific data, hash table, memory allocation
 	Tcl-Version:	8.5
+	Tcl-Ticket:	731356
 -----
 
 # Abstract
