--- a/tip/100.md
+++ b/tip/100.md
@@ -8,6 +8,7 @@
 	Discussions-To: news:comp.lang.tcl
 	Keywords:       load,unload,dynamic library
 	Tcl-Version:    8.5
+	Tcl-Ticket:     823486
 -----
 
 # Abstract
@@ -218,6 +219,7 @@ This document has been placed in the public domain.
 
 # Appendix: The unload man page.
 
+<pre>
      NAME
      unload - Unload machine code.
      SYNOPSIS
@@ -384,4 +386,4 @@ info sharedlibextension, load, safe
 KEYWORDS
 
 binary code, unloading, safe interpreter, shared library
-
+</pre>
