--- a/tip/75.md
+++ b/tip/75.md
@@ -10,6 +10,7 @@
 	Discussions-To: http://purl.org/mini/cgi-bin/chat.cgi
 	Keywords:       switch,regexp,parentheses
 	Tcl-Version:    8.5
+	Tcl-Ticket:     848578
 -----
 
 # Abstract
