Some more links

--- a/tip/85.md
+++ b/tip/85.md
@@ -8,6 +8,7 @@
 	Post-History:   
 	Keywords:       test,string comparison,floating-point
 	Tcl-Version:    8.4
+	Tcl-Ticket:     521362
 -----
 
 # Abstract
