--- a/tip/93.md
+++ b/tip/93.md
@@ -8,6 +8,7 @@
 	Created:        28-Dec-2001
 	Post-History:   
 	Tcl-Version:    8.4
+	Implementation-URL: http://faqchest.dynhost.com/prgm/ptk-l/ptk-01/ptk-0112/ptk-011201/ptk01122716_24437.html
 -----
 
 # Abstract
