--- a/tip/63.md
+++ b/tip/63.md
@@ -6,6 +6,7 @@
 	Created:        27-Sep-2001
 	Post-History:   
 	Tcl-Version:    8.4
+	Implementation-URL: ftp://ftp.ucsd.edu/pub/alpha/tcl/compoundmenu.diff
 -----
 
 # Abstract
