--- a/tip/87.md
+++ b/tip/87.md
@@ -9,6 +9,7 @@
 	Discussions-To: news:comp.lang.tcl
 	Keywords:       Tcl_SetRecusionLimit,recursion limit
 	Tcl-Version:    8.4
+	Tcl-Ticket:     522849
 -----
 
 # Abstract
