Last of implementation links for 8.4

--- a/tip/10.md
+++ b/tip/10.md
@@ -6,6 +6,7 @@
 	Created:        08-Nov-2000
 	Post-History:   
 	Tcl-Version:    8.4
+	Implementation-URL: https://core.tcl.tk/tips/raw/assets/10.patch
 -----
 
 # Abstract
