--- a/tip/21.md
+++ b/tip/21.md
@@ -6,6 +6,7 @@
 	Created:        14-Jan-2001
 	Post-History:   
 	Tcl-Version:    8.4
+	Implementation-URL: http://www.hwaci.com/sw/asym_pad_patch_2.txt
 -----
 
 # Abstract
