--- a/tip/48.md
+++ b/tip/48.md
@@ -8,6 +8,7 @@
 	Post-History:   
 	Discussions-To: news:comp.lang.tcl
 	Tcl-Version:    8.4
+	Implementation-URL: http://www.purl.org/NET/bonnet/pub/style.patch
 -----
 
 # Abstract
