--- a/tip/14.md
+++ b/tip/14.md
@@ -7,6 +7,7 @@
 	Post-History:   
 	Keywords:       Tk,photo,transparency,internal,access
 	Tcl-Version:    8.4.0
+	Implementation-URL: http://www.cs.man.ac.uk/~fellowsd/tcl/validRegion.patch
 -----
 
 # Abstract
