--- a/tip/47.md
+++ b/tip/47.md
@@ -8,6 +8,7 @@
 	Created:        19-Jul-2001
 	Post-History:   
 	Tcl-Version:    8.4
+	Implementation-URL: http://www.eecs.umich.edu/~mckay/computer/wmenablers.84a3.patch.gz
 -----
 
 # Abstract
